--- a/composer.json
+++ b/composer.json
@@ -38,10 +38,10 @@
         }
     },
     "require": {
-        "php": "^8.1",
-        "tiny-blocks/math": "^1.0",
-        "tiny-blocks/currency": "^1.0",
-        "tiny-blocks/value-object": "^1.0"
+        "php": "^8.1||^8.2",
+        "tiny-blocks/math": "^2.0",
+        "tiny-blocks/currency": "^2.0",
+        "tiny-blocks/value-object": "^2.0"
     },
     "require-dev": {
         "infection/infection": "^0.26",
