--- a/infection.json.dist
+++ b/infection.json.dist
@@ -1,22 +1,18 @@
 {
     "timeout": 10,
     "testFramework": "phpunit",
-    "tmpDir": "report/",
+    "tmpDir": "report/infection/",
     "source": {
         "directories": [
             "src"
         ]
     },
     "logs": {
-        "text": "report/logs/infection-text.log",
-        "summary": "report/logs/infection-summary.log"
+        "text": "report/infection/logs/infection-text.log",
+        "summary": "report/infection/logs/infection-summary.log"
     },
     "mutators": {
-        "@default": true,
-        "DecrementInteger": false,
-        "IncrementInteger": false,
-        "MethodCallRemoval": false,
-        "ProtectedVisibility": false
+        "@default": true
     },
     "phpUnit": {
         "configDir": "",
