--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -4,4 +4,5 @@ parameters:
   level: 9
   tmpDir: report/phpstan
   ignoreErrors:
+    - '#Unsafe usage of new static#'
   reportUnmatchedIgnoredErrors: false
